--- a/ly-trip/index.html
+++ b/ly-trip/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&type=webgl&ak=mxt0WaoAxI0STE2qh5tWKI7Gq1kBt2gb"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
